renamed name to student and fixed breaks in ReportQueryBuilder changes, still need to work on session logic

--- a/src/components/Worksheet/Worksheet.scss
+++ b/src/components/Worksheet/Worksheet.scss
@@ -1,6 +1,8 @@
 .worksheetContainer {
 	margin: 0 auto;
 	width: 75%;
+	position: relative;
+	top: 25px;
 }
 
 .userWorksheetTitle {
